src/test/ui/imports/issue-62767.stderr
error: inconsistent resolution for an import
  --> $DIR/issue-62767.rs:24:5
   |
LL | use bar::bar;
   |     ^^^^^^^^

error[E0432]: unresolved import `Same`
  --> $DIR/issue-62767.rs:12:5
   |
LL | use Same::Same;
   |     ^^^^ `Same` is a variant, not a module

error[E0432]: unresolved import `bar::bar`
  --> $DIR/issue-62767.rs:24:5
   |
LL | use bar::bar;
   |     ^^^^^^^^ no `bar` in `foo::bar::bar`

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0432`.
